# cpp-sorting-algorithms

./: CMakeLists.txt  IDENTIFICATION.txt  README.md  README.txt  demo  presentation.url
app/: sorting_visualizer.cpp
include/: bubble_sort.hpp  colour.hpp  insertion_sort.hpp  quick_sort.hpp
lib/: colour.cpp
